# cping

./: .gitignore  LICENSE  README.md  build.gradle.kts  database.sql  info_me.md  key_cping.jks  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: main.h
app/src/main/cpp/include/debug/: logger.cpp
app/src/main/cpp/include/native/: farsi_type.cpp  imgui_renderer.cpp  imgui_renderer.h
app/src/main/cpp/include/types/: structs.h
app/src/main/cpp/include/utils/: enum.h  frame_time.h  log.h  native_bridge.h  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h  structs.h  ue4.h  utils.cpp  utils.h
app/src/main/cpp/src/: main.cpp  main.h
cping-bot-telegram/: .env.example  .gitignore
cping-bot-telegram/src/: main.py
cping-bot-telegram/src/db/: supabase.py
cping-bot-telegram/src/utils/: config.py  dashboard.py  help.py  login.py  start.py  translations.py  utils.py
cping-memory/: build.bat
cping-memory-delta-force/: .gitignore  build.bat
cping-memory-delta-force/jni/: Android.mk
cping-memory-delta-force/jni/src/: main.cpp  main.h
cping-memory-pubg/: build.bat
cping-memory-pubg/jni/: Android.mk
cping-memory-pubg/jni/src/: main.cpp  main.h
cping-memory-pubg/libs/arm64-v8a/: cping_memory_delta_force
cping-memory/jni/: Android.mk
cping-memory/jni/include/: branding.h  main.h
cping-memory/jni/src/: main.cpp  (+2 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+89 files in other folders)
